[main] refactored layout issues in Redirect Page

--- a/src/components/redirect-page/RedirectPage.scss
+++ b/src/components/redirect-page/RedirectPage.scss
@@ -2,8 +2,11 @@
     background-color: #D9D9D9;
     height: 100vh;
     padding: 10px 0 0 15px;
-    
-    h2 {
-        margin-top: 0;
+
+    &__container {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 12px;
     }
 }
